--- a/outputfolder/aliexpress.html
+++ b/outputfolder/aliexpress.html
@@ -1,10 +1,7 @@
 <html><head></head><body><h2>¿Cuánto tiempo se tarda en entregar Aliexpress ?</h2>
-<p>aliexpress es un corredor que manda productos al Universo. Todos los vendedores que operan a través del patio web deberían informar sobre los momentos probables de entrega de los artículos vendidos. La vía más particular, en completo, le brinda 2 opciones de entrega:</p>
-<p>modus Standard Shipping Aliexpress: el usanza de entrega de productos desde 15 a 45 días laborables, todo a partir de la vencimiento de gratificación del artículo (de gorra);</p>
+<p>AliExpress es una plataforma de comercio electrónico que envía productos en todo el mundo. Los vendedores de la plataforma están obligados a informar de plazos estimados entrega de todos los productos ofrecidos en venta. El plazo de entrega aproximado es de 15-45 días laborables desde que se emite el paquete (opción gratuita).</p>
 <ul>
-    <li>modo Standard Shipping</li>
-    <li>modalidad Premium Shipping Aliexpress: el ciclo de entrega es de 7 y 15 días laborables a patir la día de envío del artículo.</li>
-    <li>el modo Premium Shipping Aliexpress: el plazo de entrega es de unos 7 y 15 días laborables después del envío del artículo</li>
+    <li>el modo Standard Shipping Aliexpress: el tiempo de entrega es de aproximadamente 15 a 45 días hábiles después de la fecha de envío del artículo (opción gratuita)</li>
 </ul>
 
 
