--- a/outputfolder/aliexpress.html
+++ b/outputfolder/aliexpress.html
@@ -1,5 +1,5 @@
 <html><head></head><body><h2>¿Cuánto tiempo se tarda en entregar Aliexpress ?</h2>
-<p>AliExpress es una plataforma de comercio electrónico que envía productos en todo el mundo. Los vendedores de la plataforma están obligados a informar de plazos estimados entrega de todos los productos ofrecidos en venta. El plazo de entrega aproximado es de 15-45 días laborables desde que se emite el paquete (opción gratuita).</p>
+<p>Aliexpress es una plataforma de comercio electrónico que envía productos al mundo. Los vendedores que utilizan la plataforma tienen la obligación de comunicar los plazos de entrega estimados de los productos ofrecidos a la venta.</p>
 <ul>
     <li>el modo Standard Shipping Aliexpress: el tiempo de entrega es de aproximadamente 15 a 45 días hábiles después de la fecha de envío del artículo (opción gratuita)</li>
 </ul>
