--- a/outputfolder/aliexpress.html
+++ b/outputfolder/aliexpress.html
@@ -1,8 +1,126 @@
-<html><head></head><body><h2>¿Cuánto tiempo se tarda en entregar Aliexpress ?</h2>
-<p>Aliexpress es una plataforma de comercio electrónico que envía productos al mundo. Los vendedores que utilizan la plataforma tienen la obligación de comunicar los plazos de entrega estimados de los productos ofrecidos a la venta.</p>
+<html><head></head><body>
+    <p>The different possible status states:</p>
+    <p>Bear in mind that large packages do not get the same kind of priority in their shipment, so their delivery times may vary in accordance with the size of the packages.</p>
+    <p>For air delivery method via China Air Parcel and Surface Air Lift, the best estimates for receipt of the package can be anywhere between 5 to 30 days. The last, for surface packages, can take over a month or more.</p>
+    <p>For each mode of delivery, the estimated delivery times are:</p>
 <ul>
-    <li>el modo Standard Shipping Aliexpress: el tiempo de entrega es de aproximadamente 15 a 45 días hábiles después de la fecha de envío del artículo (opción gratuita)</li>
-</ul>
-
-
-</body></html>
+    <li>SEND ITEM TO DOMESTIC LOCATION (INB)</li>
+    <li>PROCESSED THROUGH FACILITY</li>
+    <li>MUTUAL DEVELOPMENT</li>
+    <li>ACCEPTANCE</li>
+    <li>PROCESSED THROUGH SORT FACILITY</li>
+    <li>EXPORT OF INTERNATIONAL MAIL</li>
+    <li>ARRIVAL AT INWARD OFFICE OF EXCHANGE</li>
+    <li>DEPARTURE FROM OUTWARD OFFICE OF EXCHANGE</li>
+    <li>ARRIVED AT USPS FACILITY</li>
+    <li>DISPATCHING</li>
+    <li>IMPORT OF INTERNATIONAL MAIL</li>
+    <li>RECEPTION AT CUSTOM HOUSE</li>
+    <li>WishPOST ORDER GENERATED</li>
+    <li>MAILED</li>
+    <li>THE ITEM ACCEPTED FROM THE SENDER</li>
+    <li>SEND ITEM TO DOMESTIC LOCATION</li>
+    <li>POSTING/COLLECTION</li>
+    <li>DEPARTED USPS DESTINATION FACILITY</li>
+    <li>ARRIVAL AT DELIVERY OFFICE</li>
+    <li>ARRIVED AT UNIT</li>
+    <li>THE CONSIGNMENT WAS POSTED</li>
+    <li>DEPARTURE FROM OUTWARD OE</li>
+    <li>RECEIVE ITEM AT OFFICE OF EXCHANGE</li>
+    <li>HANDED OVER TO CUSTOMS</li>
+    <li>ACCEPTED BY CARRIER</li>
+    <li>DEPARTURE FROM INWARD OFFICE OF EXCHANGE</li>
+    <li>DEPARTURE FROM AIRPORT TO DESTINATION COUNTRY</li>
+    <li>FINAL DELIVERY</li>
+    <li>INSERT ITEM INTO BAG (OTB)</li>
+    <li>PROCESSING, HANDED TO A MAIL CARRIER</li>
+    <li>PROCESSING, FORWARDED TO THE POSTMAN</li>
+    <li>RECEPTION</li>
+    <li>ARRIVE AT PROCESSING CENTER, FROM CHINA</li>
+    <li>SENT FROM</li>
+    <li>ACCEPTED AT THE POST OFFICE</li>
+    <li>HAS BEEN CLOSED</li>
+    <li>RECEIVED BY LINE-HAUL</li>
+    <li>OUTBOUND IN SORTING CENTER</li>
+    <li>INBOUND IN SORTING CENTER</li>
+    <li>WAITING FOR PICK UP</li>
+    <li>DEPARTED USPS FACILITY</li>
+    <li>ELECTRONIC INFORMATION HAS BEEN RECEIVED</li>
+    <li>SHIPMENT CONFIRMATION</li>
+    <li>PROCESSING, DEPARTED FROM THE PLACE OF RETURN OR REDELIVERY</li>
+    <li>LEFT FOR DESTINATION COUNTRY，NEXT STOP,</li>
+    <li>HAS BEEN RECEIVED</li>
+    <li>ARRIVE AT LOCAL DELIVERY OFFICE</li>
+    <li>DELIVERED, IN/AT MAILBOX YOUR ITEM WAS DELIVERED IN OR AT THE MAILBOX AT</li>
+    <li>SHIPMENT OPERATION COMPLETED AT FACILITY ERLIANHAOTE</li>
+    <li>SHIPMENT ARRIVED AT FACILITY SHENZHEN</li>
+    <li>DELIVER ITEM (INB)</li>
+    <li>SHIPMENT INFORMATION RECEIVED</li>
+    <li>AIRLINE DEPARTED FROM ORIGINAL COUNTRY</li>
+    <li>HAS BEEN OPENED</li>
+    <li>DELIVERED</li>
+    <li>UNSUCCESSFUL DELIVERY</li>
+    <li>DELIVERY ATTEMPT FAILED</li>
+    <li>ARRIVE AT DESTINATION COUNTRY</li>
+    <li>HAND OVER TO AIRLINE</li>
+    <li>LEFT FOR DESTINATION COUNTRY</li>
+    <li>ARRIVED</li>
+    <li>RECEIVED BY THE BRAZIL POST OBJECT SUBJECT TO INSPECTION AND DELAY ON DELIVERY</li>
+    <li>ARRIVED AT EXCHANGE OFFICE</li>
+    <li>FORWARDED</li>
+    <li>HAS BEEN SEALED</li>
+    <li>POSTED</li>
+    <li>DELIVERY STATUS NOT UPDATED</li>
+    <li>OUT FOR DELIVERY</li>
+    <li>DEPARTED USPS REGIONAL FACILITY</li>
+    <li>ARRIVED AT USPS REGIONAL DESTINATION FACILITY</li>
+    <li>IN TRANSIT TO DESTINATION</li>
+    <li>ARRIVAL AT SORTING CENTER</li>
+    <li>POSTING</li>
+    <li>DISPATCHED FROM SORTING CENTER</li>
+    <li>DESPATCH FROM SORTING CENTER</li>
+    <li>DELIVERED, FRONT DESK/RECEPTION YOUR ITEM WAS DELIVERED TO THE FRONT DESK OR RECEPTION AREA AT</li>
+    <li>ARRIVED AT HUB</li>
+    <li>ARRIVE AT PROCESSING CENTER, FROM</li>
+    <li>SUCCESSFULLY DELIVERED</li>
+    <li>DELIVERY</li>
+    <li>WAITING FOR PICKUP</li>
+    <li>ITEM BEING HANDED OVER TO THE LOCAL COURIER, TRACKING ENDED</li>
+    <li>SHIPPED</li>
+    <li>EXCHANGED</li>
+    <li>IMPORT CLEARANCE SUCCESS</li>
+    <li>RECEIVED</li>
+    <li>ITEM DISPATCHED</li>
+    <li>DISPATCH FROM THE POINT OF ORIGIN INTERNATIONAL OFFICE</li>
+    <li>ITEM IN TRANSIT</li>
+    <li>ARRIVED AT DESTINATION COUNTRY FLIGHT NO:</li>
+    <li>DEPARTURE FROM AIRPORT TO DESTINATION COUNTRY FLIGHT NO:</li>
+    <li>DEPARTED FROM CUSTOMS OF ORIGINAL COUNTRY</li>
+    <li>DEPARTED FROM CARRIER</li>
+    <li>DEPARTED FROM THE FIRST MILE SORTING CENTER</li>
+    <li>ARRIVED AT THE FIRST MILE SORTING CENTER</li>
+    <li>ARRIVED FROM OVERSEAS (COUNTRY CODE: CN), IN TRANSIT TO NEXT PROCESSING CENTRE FOR</li>
+    <li>RELEASED FROM CUSTOMS</li>
+    <li>LEAVING CENTER, NEXT STATION CENTER</li>
+    <li>CENTER CUSTOMS SCAN</li>
+    <li>CENTER RECEIVED</li>
+    <li>UNDELIVERABLE</li>
+    <li>ARRIVED AT THE LOCAL DISTRIBUTION CENTER</li>
+    <li>DEPARTED FROM LOCAL DISTRIBUTION CENTER</li>
+    <li>INTERNATIONAL ITEM MAILED IN ORIGINATING COUNTRY</li>
+    <li>AWAITING RELEASE FROM CHINA</li>
+    <li>SHIPMENT CANCELLED</li>
+    <li>READY FOR PICKUP AT DELIVERY PLACE</li>
+    <li>THE CONSIGNMENT WAS DELIVERED</li>
+    <li>THE CONSIGNMENT IS BEING PREPARED FOR DELIVERY</li>
+    <li>THE CONSIGNMENT ENTERED THE LOGISTICS HUB</li>
+    <li>INCOMMING INTERNATIONAL</li>
+    <li>PROCESSING, DEPARTURE FROM INWARD OFFICE OF EXCHANGE</li>
+    <li>SEND ITEM TO DOMESTIC LOCATION:</li>
+    <li>HAND OVER TO CUSTOMS</li>
+    <li>LEFT THE WAREHOUSE</li>
+    <li>THE ITEM SENT FROM THE OFFICE OF EXCHANGE OF ORIGIN COUNTRY TO THE DESTINATION COUNTRY</li>
+    <li>ARRIVED AT THE WAREHOUSE</li>
+    <li>RETURN, STORAGE LIFE IS EXPIRED</li>
+    <li>ATTEMPTED DELIVERY</li>
+</ul></body></html>
