--- a/inputfolder/aliexpress.html
+++ b/inputfolder/aliexpress.html
@@ -1,125 +1,93 @@
-<p>The different possible status states:</p>
-<p>Note that the size of the packages affects delivery times because large shipments are not prioritized for shipment, so they may take longer for their delivery.</p>
-<p>The air delivery methods via China Air Parcel and Surface Air Lift generally ensure an estimated time between 5 and 30 days for the receipt of the package. The last one, for surface packages, can take up to more than a month.</p>
-<p>The estimated delivery times for each mode of delivery are as follows:</p>
+<h2>Combien de temps prend la livraison Bpost ?</h2>
+<p>Bpost est l'un des opérateurs postaux majeurs en Belgique, la société propose des livraisons nationales et internationales de colis au dernier kilomètre.</p>
+<p>Le délai de livraison pour les colis nationaux est estimé le plus souvent au jour ouvrable suivant.</p>
+<p>Dans le cas des livraisons internationales, les délais de livraison sont déterminés par le type de colis, son poids, sa taille, l'option d'expédition choisie ainsi que sa destination finale.</p>
+<p>Les délais moyens de livraison à l'étranger varient entre 10 et 35 jours ouvrables environ selon la destination.</p>
+<p>Dans le cadre des livraisons de colis internationales, il suffit de mentionner l'adresse lisible et détaillée du destinataire avec le pays de destination, de s'assurer d'avoir l'emballage adapté pour l'acheminement. Le cas échéant, Bpost propose des emballages adaptés à la vente. Enfin, le colis doit être déposé dans le centre de dépôt Bpost le plus proche afin qu'il soit pris en charge.</p>
+<p>Plusieurs services de livraison Bpost sont disponibles:</p>
 <ul>
-    <li>SEND ITEM TO DOMESTIC LOCATION (INB)</li>
-    <li>PROCESSED THROUGH FACILITY</li>
-    <li>MUTUAL DEVELOPMENT</li>
-    <li>ACCEPTANCE</li>
-    <li>PROCESSED THROUGH SORT FACILITY</li>
-    <li>EXPORT OF INTERNATIONAL MAIL</li>
-    <li>ARRIVAL AT INWARD OFFICE OF EXCHANGE</li>
-    <li>DEPARTURE FROM OUTWARD OFFICE OF EXCHANGE</li>
-    <li>ARRIVED AT USPS FACILITY</li>
-    <li>DISPATCHING</li>
-    <li>IMPORT OF INTERNATIONAL MAIL</li>
-    <li>RECEPTION AT CUSTOM HOUSE</li>
-    <li>WishPOST ORDER GENERATED</li>
-    <li>MAILED</li>
-    <li>THE ITEM ACCEPTED FROM THE SENDER</li>
-    <li>SEND ITEM TO DOMESTIC LOCATION</li>
-    <li>POSTING/COLLECTION</li>
-    <li>DEPARTED USPS DESTINATION FACILITY</li>
-    <li>ARRIVAL AT DELIVERY OFFICE</li>
-    <li>ARRIVED AT UNIT</li>
-    <li>THE CONSIGNMENT WAS POSTED</li>
-    <li>DEPARTURE FROM OUTWARD OE</li>
-    <li>RECEIVE ITEM AT OFFICE OF EXCHANGE</li>
-    <li>HANDED OVER TO CUSTOMS</li>
-    <li>ACCEPTED BY CARRIER</li>
-    <li>DEPARTURE FROM INWARD OFFICE OF EXCHANGE</li>
-    <li>DEPARTURE FROM AIRPORT TO DESTINATION COUNTRY</li>
-    <li>FINAL DELIVERY</li>
-    <li>INSERT ITEM INTO BAG (OTB)</li>
-    <li>PROCESSING, HANDED TO A MAIL CARRIER</li>
-    <li>PROCESSING, FORWARDED TO THE POSTMAN</li>
-    <li>RECEPTION</li>
-    <li>ARRIVE AT PROCESSING CENTER, FROM CHINA</li>
-    <li>SENT FROM</li>
-    <li>ACCEPTED AT THE POST OFFICE</li>
-    <li>HAS BEEN CLOSED</li>
-    <li>RECEIVED BY LINE-HAUL</li>
-    <li>OUTBOUND IN SORTING CENTER</li>
-    <li>INBOUND IN SORTING CENTER</li>
-    <li>WAITING FOR PICK UP</li>
-    <li>DEPARTED USPS FACILITY</li>
-    <li>ELECTRONIC INFORMATION HAS BEEN RECEIVED</li>
-    <li>SHIPMENT CONFIRMATION</li>
-    <li>PROCESSING, DEPARTED FROM THE PLACE OF RETURN OR REDELIVERY</li>
-    <li>LEFT FOR DESTINATION COUNTRY，NEXT STOP,</li>
-    <li>HAS BEEN RECEIVED</li>
-    <li>ARRIVE AT LOCAL DELIVERY OFFICE</li>
-    <li>DELIVERED, IN/AT MAILBOX YOUR ITEM WAS DELIVERED IN OR AT THE MAILBOX AT</li>
-    <li>SHIPMENT OPERATION COMPLETED AT FACILITY ERLIANHAOTE</li>
-    <li>SHIPMENT ARRIVED AT FACILITY SHENZHEN</li>
-    <li>DELIVER ITEM (INB)</li>
-    <li>SHIPMENT INFORMATION RECEIVED</li>
-    <li>AIRLINE DEPARTED FROM ORIGINAL COUNTRY</li>
-    <li>HAS BEEN OPENED</li>
-    <li>DELIVERED</li>
-    <li>UNSUCCESSFUL DELIVERY</li>
-    <li>DELIVERY ATTEMPT FAILED</li>
-    <li>ARRIVE AT DESTINATION COUNTRY</li>
-    <li>HAND OVER TO AIRLINE</li>
-    <li>LEFT FOR DESTINATION COUNTRY</li>
-    <li>ARRIVED</li>
-    <li>RECEIVED BY THE BRAZIL POST OBJECT SUBJECT TO INSPECTION AND DELAY ON DELIVERY</li>
-    <li>ARRIVED AT EXCHANGE OFFICE</li>
-    <li>FORWARDED</li>
-    <li>HAS BEEN SEALED</li>
-    <li>POSTED</li>
-    <li>DELIVERY STATUS NOT UPDATED</li>
-    <li>OUT FOR DELIVERY</li>
-    <li>DEPARTED USPS REGIONAL FACILITY</li>
-    <li>ARRIVED AT USPS REGIONAL DESTINATION FACILITY</li>
-    <li>IN TRANSIT TO DESTINATION</li>
-    <li>ARRIVAL AT SORTING CENTER</li>
-    <li>POSTING</li>
-    <li>DISPATCHED FROM SORTING CENTER</li>
-    <li>DESPATCH FROM SORTING CENTER</li>
-    <li>DELIVERED, FRONT DESK/RECEPTION YOUR ITEM WAS DELIVERED TO THE FRONT DESK OR RECEPTION AREA AT</li>
-    <li>ARRIVED AT HUB</li>
-    <li>ARRIVE AT PROCESSING CENTER, FROM</li>
-    <li>SUCCESSFULLY DELIVERED</li>
-    <li>DELIVERY</li>
-    <li>WAITING FOR PICKUP</li>
-    <li>ITEM BEING HANDED OVER TO THE LOCAL COURIER, TRACKING ENDED</li>
-    <li>SHIPPED</li>
-    <li>EXCHANGED</li>
-    <li>IMPORT CLEARANCE SUCCESS</li>
-    <li>RECEIVED</li>
-    <li>ITEM DISPATCHED</li>
-    <li>DISPATCH FROM THE POINT OF ORIGIN INTERNATIONAL OFFICE</li>
-    <li>ITEM IN TRANSIT</li>
-    <li>ARRIVED AT DESTINATION COUNTRY FLIGHT NO:</li>
-    <li>DEPARTURE FROM AIRPORT TO DESTINATION COUNTRY FLIGHT NO:</li>
-    <li>DEPARTED FROM CUSTOMS OF ORIGINAL COUNTRY</li>
-    <li>DEPARTED FROM CARRIER</li>
-    <li>DEPARTED FROM THE FIRST MILE SORTING CENTER</li>
-    <li>ARRIVED AT THE FIRST MILE SORTING CENTER</li>
-    <li>ARRIVED FROM OVERSEAS (COUNTRY CODE: CN), IN TRANSIT TO NEXT PROCESSING CENTRE FOR</li>
-    <li>RELEASED FROM CUSTOMS</li>
-    <li>LEAVING CENTER, NEXT STATION CENTER</li>
-    <li>CENTER CUSTOMS SCAN</li>
-    <li>CENTER RECEIVED</li>
-    <li>UNDELIVERABLE</li>
-    <li>ARRIVED AT THE LOCAL DISTRIBUTION CENTER</li>
-    <li>DEPARTED FROM LOCAL DISTRIBUTION CENTER</li>
-    <li>INTERNATIONAL ITEM MAILED IN ORIGINATING COUNTRY</li>
-    <li>AWAITING RELEASE FROM CHINA</li>
-    <li>SHIPMENT CANCELLED</li>
-    <li>READY FOR PICKUP AT DELIVERY PLACE</li>
-    <li>THE CONSIGNMENT WAS DELIVERED</li>
-    <li>THE CONSIGNMENT IS BEING PREPARED FOR DELIVERY</li>
-    <li>THE CONSIGNMENT ENTERED THE LOGISTICS HUB</li>
-    <li>INCOMMING INTERNATIONAL</li>
-    <li>PROCESSING, DEPARTURE FROM INWARD OFFICE OF EXCHANGE</li>
-    <li>SEND ITEM TO DOMESTIC LOCATION:</li>
-    <li>HAND OVER TO CUSTOMS</li>
-    <li>LEFT THE WAREHOUSE</li>
-    <li>THE ITEM SENT FROM THE OFFICE OF EXCHANGE OF ORIGIN COUNTRY TO THE DESTINATION COUNTRY</li>
-    <li>ARRIVED AT THE WAREHOUSE</li>
-    <li>RETURN, STORAGE LIFE IS EXPIRED</li>
-    <li>ATTEMPTED DELIVERY</li>
+    <li>Pour les livraisons en Belgique:
+        <ul>
+            <li>option Standard: Livraison à domicile pour les colis jusqu'à 30kg, avec possibilité de livraison le jour ouvrable suivant</li>
+            <li>option Garantie: Livraison à domicile ou dans un point retrait, contre signature pour les colis jusqu'à 30kg, livraison assurée le jour ouvrable suivant et avec une garantie jusqu'à 500€ pour les objets</li>
+        </ul>
+    </li>
+</ul>
+<p>Les livraisons nationales peuvent s'effectuer à domicile, sur le lieu de travail, dans un bureau de poste local, dans une des 2300 agences Bpost, dans un point de retrait colis ou dans un distributeur de colis.</p>
+<p>Dans le cas des livraisons à l'étranger, une adresse de domicile est toujours nécessaire, sauf pour les Pays Bas ou la France ou la livraison peut se faire à un point retrait. Le site Bpost permet de trouver le point retrait le plus proche de son domicile dans ces pays.</p>
+<ul>
+    <li>Pour les livraisons en Europe: ce service concerne notamment les livraisons vers la Pologne, l'Allemagne, la France, les Pays bas, l'Italie, l'Espagne, le Luxembourg et le Portugal:
+        <ul>
+            <li>option Standard (disponible en ligne): ce service est accessible sur le site, l'expéditeur peut gérer son envoi en autonomie en éditant une étiquette d'envoi en ligne, la livraison peut se faire à une adresse (domicile ou lieu de travail) ou dans un point de retrait en France et aux Pays Bas, cette option est disponible pour les colis jusqu'à 30kg</li>
+            <li>option Economy (disponible en bureau de vente): la livraison est effectuée à une adresse (domicile ou lieu de travail), pour les colis jusqu'à 2kg et réalisée sans suivi</li>
+            <li>option Standard (disponible en bureau de vente): la livraison est effectuée à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30kg, un suivi est prévu via l'outil Bpost Track &amp; Trace</li>
+            <li>option Express (disponible en bureau de vente): la livraison est effectuée à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30kg, contre signature, et avec avis de réception daté, un suivi est prévu via l'outil Bpost Track &amp; Trace</li>
+        </ul>
+    </li>
+</ul>
+<ul>
+    <li>Pour les livraisons internationales:
+        <ul>
+            <li>option Standard (disponible en ligne): ce service est accessible sur le site, l'expéditeur peut gérer son envoi en autonomie en éditant une étiquette d'envoi en ligne, la livraison peut se faire à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30kg</li>
+            <li>option Economy (disponible en bureau de vente): la livraison est effectuée à une adresse (domicile ou lieu de travail), pour les colis jusqu'à 2kg et réalisée sans suivi</li>
+            <li>option Standard (disponible en bureau de vente): la livraison est effectuée à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30kg, un suivi est prévu via l'outil Bpost Track &amp; Trace</li>
+            <li>option Express (disponible en bureau de vente): la livraison est effectuée à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30kg, contre signature, et avec avis de réception daté, un suivi est prévu via l'outil Bpost Track &amp; Trace</li>
+        </ul>
+    </li>
+</ul>
+<p>Les destinations couvertes par les livraisons Bpost sont les pays et territoires suivants entre autres:</p>
+<ul>
+    <li>Belgique, Allemagne, France, Pays Bas, Royaume Uni, Afrique du Sud, Albanie, Algérie, Andorre, Angola, Antilles Néerlandaises, Arabie Saoudite, Argentine, Arménie, Australie, Autriche, Azerbaïdjan, Açores, Bahamas, Bahrain, Bangladesh, Barbade, Bénin, Bermudes, Bhoutan, Biélorussie, Bolivie, Bosnie, Botswana, Brésil, Brunei, Burkina Faso, Bulgarie, Burundi, Cambodge, Cameroun, Canada, Cap Vert, Chili, Chine, Chypre, Vatican, Colombie, Corée du Sud, Costa Rica, Côte d'Ivoire, Croatie, Cuba, Danemark, Djibouti, Egypte, Equateur, Emirats Arabes Unis, Erythrée, Espagne, Estonie, Etats Unis, Éthiopie, Fidji, Finlande, Gabon, Gambie, Géorgie, Ghana, Gibraltar, Grèce, Groenland, Guadeloupe, Guam, Guernesey, Guyane, Guinée, Haïti, Hong Kong, Hongrie, Iles Caïman, Iles Vierges, Inde, Indonésie, Iran, Irlande, Islande, Israel, Italie, Jamaique, Japon, Jordanie, Kazakhstan, Kosovo, Kenya, Koweït, Laos, Lesotho, Lettonie, Libéria, Luxembourg, Lituanie, Macao, Madère, Macédoine, Madagascar, Malaisie, Malawi, Maldives, Mali, Malte, Maroc, Martinique, Mauritanie, Mexique, Moldavie, Mongolie, Mozambique, Nicaragua, Niger, Nigéria, Norvège, Nouvelle Zélande, Nouvelle Calédonie, Oman, Ouganda, Pakistan, Panama, Papouasie Nouvelle Guinée, Paraguay, Pérou, Philippines, Pologne, Polynésie française, Porto Rico, Portugal, Qatar, République centrafricaine, République du Congo, République dominicaine, Réunion Russie, Roumanie, Rwanda, Saint Martin, Salvador, Samoa, Sénégal, Sierra Leone, Serbie, Seychelles, Singapour, Slovaquie, Slovénie, Sri Lanka, Somalie, Suède, Suisse, Surinam, Syrie, Taïwan, Tanzanie, Tchad, Thaïlande, Tunisie, Togo, Turquie, Ukraine, Uruguay, Venezuela, Vietnam, Yémen, Zambie, Zimbabwé</li>
+</ul>
+<h2>Comment contacter Bpost ?</h2>
+<p>Le siège social de Bpost est situé en Belgique, à l'adresse suivante:</p>
+<ul>
+    <li>Pl.de la Monnaie, 1000 Bruxelles, Belgique. Le service clients est joignable pour les particuliers, du lundi au vendredi de 8h à 19h, et le samedi de 8h30 à 16h30, au numéro suivant: +32022785127</li>
+</ul>
+<p>Et pour les professionnels du lundi au vendredi de 8h30 à 17h30 au numéro suivant:</p>
+<ul>
+    <li>+3202205785</li>
+</ul>
+<p>Vous pouvez joindre Bpost par courrier à l'adresse suivante:</p>
+<ul>
+    <li>bpost, Boîte 5000, 1000 Bruxelles.</li>
+</ul>
+<h2>Informations à propos des livraisons Bpost</h2>
+<p>Bpost, anciennement connu sous le nom La Poste est une entreprise chargée du traitement du courrier postal et de la gestion des bureaux de poste nationaux qui commercialise des services postaux ainsi que des solutions financières et des assurances en Belgique.</p>
+<p>Initialement, la poste belge est un service gouvernemental depuis 1830, il devient la "régie des postes" en 1971 puis La poste en 1992 avant d'adopter en 2010, le nom et logo Bpost.</p>
+<p>Bpost représente le premier opérateur postal belge, l'entreprise propose des services de transport et livraison de colis au niveau national et international.</p>
+<p>La société emploie plus de 35 000 salariés en Belgique et à l'étranger, ses principaux concurrents en Europe sont TNT et Postnord entre autres.</p>
+<p>Bpost propose des solutions de livraison de colis à domicile, sur le lieu de travail, en point relais en Belgique et à travers le monde ainsi que des services d'emballage, de suivi et de traitement de commandes.</p>
+<p>Bpost propose également des services financiers, et des assurances.</p>
+<p>Ayant des bureaux à l'étranger, sur plusieurs continents, Bpost est reconnu comme un des acteurs majeurs dans la livraison du dernier kilomètre en Europe et dans le monde.</p>
+<p>Bpost collabore avec de nombreux partenaires pour assurer les livraisons dans les pays étrangers.</p>
+<p>Les services de Bpost sont de plus en plus plébiscités par les détaillants en E-commerce pour le transport de leurs marchandises et la livraison de leurs colis.</p>
+<h2>Le numéro de tracking d'une livraison Bpost</h2>
+<p>Le format de numéro de tracking Bpost se compose de 10 à 30 caractères mêlant des lettres majuscules et des chiffres. Le plus souvent, le numéro de suivi débute par deux lettres majuscules, suivies de 9 chiffres et se termine par deux lettres majuscules. Comme par exemple: AA123456789BE. Les deux lettres finales BE indiquent un envoi expédié depuis la Belgique.</p>
+<h2>Les différents états de suivi Bpost</h2>
+<ul>
+    <li>ARRIVAL AT FACILITIES</li>
+    <li>AWAITING RESPONSE FROM ADDRESSEE: DELIVERY IMPOSSIBLE - ITEM DAMAGED</li>
+    <li>ARRIVAL AT INTERNATIONAL OFFICE OF EXCHANGE</li>
+    <li>DEPARTURE FROM OFFICE OF EXCHANGE</li>
+    <li>CUSTOMS CLEARED: AUTHORIZED</li>
+    <li>CONFIRMATION OF PREPARATION OF THE SHIPMENT RECEIVED</li>
+    <li>BACK TO SENDER: ITEM REFUSED BY ADDRESSEE</li>
+    <li>ITEM NOT DELIVERED: ADDRESSEE WAS CONTACTED</li>
+    <li>ITEM IN DELIVERY</li>
+    <li>ITEM RELEASED FROM CUSTOMS</li>
+    <li>ITEM NOT DELIVERED: DELIVERY ATTEMPT DONE - OTHER REASON</li>
+    <li>YOUR ITEM HAS BEEN SORTED</li>
+    <li>ITEM INFORMATION REGISTERED MANUALLY AT THE COUNTER</li>
+    <li>ITEM INFORMATION REGISTERED MANUALLY</li>
+    <li>ITEM DELIVERED</li>
+    <li>NEW DELIVERY FORESEEN: AT REQUEST OF ADDRESSEE</li>
+    <li>ITEM PRESENTED: ADDRESSEE ABSENT - MESSAGE LEFT IN ADDRESSEE'S LETTERBOX</li>
+    <li>ITEM PRESENTED TO CUSTOMS FOR CONTROL</li>
+    <li>ITEM DEPOSITED</li>
+    <li>ITEM AVAILABLE AT PICKUP POINT</li>
+    <li>RETAINED AT CUSTOMS: REASON UNKNOWN</li>
+    <li>YOUR Bpost PARCEL IS READY TO BE HANDLED IN OUR INTERNATIONAL NETWORK</li>
+    <li>IRREGULARITY ITEM: PROBLEM ADDRESS</li>
+    <li>YOUR INTERNATIONAL PARCEL IS READY TO BE HANDLED BY Bpost</li>
 </ul>
