--- a/outputfolder/aliexpress.html
+++ b/outputfolder/aliexpress.html
@@ -1,126 +1,92 @@
-<html><head></head><body>
-    <p>The different possible status states:</p>
-    <p>Bear in mind that large packages do not get the same kind of priority in their shipment, so their delivery times may vary in accordance with the size of the packages.</p>
-    <p>For air delivery method via China Air Parcel and Surface Air Lift, the best estimates for receipt of the package can be anywhere between 5 to 30 days. The last, for surface packages, can take over a month or more.</p>
-    <p>For each mode of delivery, the estimated delivery times are:</p>
+<html><head></head><body><h2>Combien de temps prend la livraison Bpost ?</h2>
+<p> 1. Collisimo est la filiale postale qu'il existe en France, elle propose des distributions nationales et internationales en fin de ligne.</p>
+<p> 2. La plupart du temps, pour faire livrer un colis ou un envoi national, le délai de livraison sera le jour ouvrable suivant.</p>
+<p> 3. Pour les tirages internationaux, comme pour les domestiques les délais que l'on connait sont déterminé par le type du colis, son poids, sa taille, la méthode d'expédition choisie, et son lieu de destination.</p>
+<p> 4. Les délais moyens de livraison à l'étranger froissent entre 10 et 35 jours ouvrables selon le pays de destination approximativement.</p>
+<p> 5. Envois internationaux de colis: il vous suffit</p>
+<p> 6. § plus communément à la maison</p>
 <ul>
-    <li>SEND ITEM TO DOMESTIC LOCATION (INB)</li>
-    <li>PROCESSED THROUGH FACILITY</li>
-    <li>MUTUAL DEVELOPMENT</li>
-    <li>ACCEPTANCE</li>
-    <li>PROCESSED THROUGH SORT FACILITY</li>
-    <li>EXPORT OF INTERNATIONAL MAIL</li>
-    <li>ARRIVAL AT INWARD OFFICE OF EXCHANGE</li>
-    <li>DEPARTURE FROM OUTWARD OFFICE OF EXCHANGE</li>
-    <li>ARRIVED AT USPS FACILITY</li>
-    <li>DISPATCHING</li>
-    <li>IMPORT OF INTERNATIONAL MAIL</li>
-    <li>RECEPTION AT CUSTOM HOUSE</li>
-    <li>WishPOST ORDER GENERATED</li>
-    <li>MAILED</li>
-    <li>THE ITEM ACCEPTED FROM THE SENDER</li>
-    <li>SEND ITEM TO DOMESTIC LOCATION</li>
-    <li>POSTING/COLLECTION</li>
-    <li>DEPARTED USPS DESTINATION FACILITY</li>
-    <li>ARRIVAL AT DELIVERY OFFICE</li>
-    <li>ARRIVED AT UNIT</li>
-    <li>THE CONSIGNMENT WAS POSTED</li>
-    <li>DEPARTURE FROM OUTWARD OE</li>
-    <li>RECEIVE ITEM AT OFFICE OF EXCHANGE</li>
-    <li>HANDED OVER TO CUSTOMS</li>
-    <li>ACCEPTED BY CARRIER</li>
-    <li>DEPARTURE FROM INWARD OFFICE OF EXCHANGE</li>
-    <li>DEPARTURE FROM AIRPORT TO DESTINATION COUNTRY</li>
-    <li>FINAL DELIVERY</li>
-    <li>INSERT ITEM INTO BAG (OTB)</li>
-    <li>PROCESSING, HANDED TO A MAIL CARRIER</li>
-    <li>PROCESSING, FORWARDED TO THE POSTMAN</li>
-    <li>RECEPTION</li>
-    <li>ARRIVE AT PROCESSING CENTER, FROM CHINA</li>
-    <li>SENT FROM</li>
-    <li>ACCEPTED AT THE POST OFFICE</li>
-    <li>HAS BEEN CLOSED</li>
-    <li>RECEIVED BY LINE-HAUL</li>
-    <li>OUTBOUND IN SORTING CENTER</li>
-    <li>INBOUND IN SORTING CENTER</li>
-    <li>WAITING FOR PICK UP</li>
-    <li>DEPARTED USPS FACILITY</li>
-    <li>ELECTRONIC INFORMATION HAS BEEN RECEIVED</li>
-    <li>SHIPMENT CONFIRMATION</li>
-    <li>PROCESSING, DEPARTED FROM THE PLACE OF RETURN OR REDELIVERY</li>
-    <li>LEFT FOR DESTINATION COUNTRY，NEXT STOP,</li>
-    <li>HAS BEEN RECEIVED</li>
-    <li>ARRIVE AT LOCAL DELIVERY OFFICE</li>
-    <li>DELIVERED, IN/AT MAILBOX YOUR ITEM WAS DELIVERED IN OR AT THE MAILBOX AT</li>
-    <li>SHIPMENT OPERATION COMPLETED AT FACILITY ERLIANHAOTE</li>
-    <li>SHIPMENT ARRIVED AT FACILITY SHENZHEN</li>
-    <li>DELIVER ITEM (INB)</li>
-    <li>SHIPMENT INFORMATION RECEIVED</li>
-    <li>AIRLINE DEPARTED FROM ORIGINAL COUNTRY</li>
-    <li>HAS BEEN OPENED</li>
-    <li>DELIVERED</li>
-    <li>UNSUCCESSFUL DELIVERY</li>
-    <li>DELIVERY ATTEMPT FAILED</li>
-    <li>ARRIVE AT DESTINATION COUNTRY</li>
-    <li>HAND OVER TO AIRLINE</li>
-    <li>LEFT FOR DESTINATION COUNTRY</li>
-    <li>ARRIVED</li>
-    <li>RECEIVED BY THE BRAZIL POST OBJECT SUBJECT TO INSPECTION AND DELAY ON DELIVERY</li>
-    <li>ARRIVED AT EXCHANGE OFFICE</li>
-    <li>FORWARDED</li>
-    <li>HAS BEEN SEALED</li>
-    <li>POSTED</li>
-    <li>DELIVERY STATUS NOT UPDATED</li>
-    <li>OUT FOR DELIVERY</li>
-    <li>DEPARTED USPS REGIONAL FACILITY</li>
-    <li>ARRIVED AT USPS REGIONAL DESTINATION FACILITY</li>
-    <li>IN TRANSIT TO DESTINATION</li>
-    <li>ARRIVAL AT SORTING CENTER</li>
-    <li>POSTING</li>
-    <li>DISPATCHED FROM SORTING CENTER</li>
-    <li>DESPATCH FROM SORTING CENTER</li>
-    <li>DELIVERED, FRONT DESK/RECEPTION YOUR ITEM WAS DELIVERED TO THE FRONT DESK OR RECEPTION AREA AT</li>
-    <li>ARRIVED AT HUB</li>
-    <li>ARRIVE AT PROCESSING CENTER, FROM</li>
-    <li>SUCCESSFULLY DELIVERED</li>
-    <li>DELIVERY</li>
-    <li>WAITING FOR PICKUP</li>
-    <li>ITEM BEING HANDED OVER TO THE LOCAL COURIER, TRACKING ENDED</li>
-    <li>SHIPPED</li>
-    <li>EXCHANGED</li>
-    <li>IMPORT CLEARANCE SUCCESS</li>
-    <li>RECEIVED</li>
-    <li>ITEM DISPATCHED</li>
-    <li>DISPATCH FROM THE POINT OF ORIGIN INTERNATIONAL OFFICE</li>
-    <li>ITEM IN TRANSIT</li>
-    <li>ARRIVED AT DESTINATION COUNTRY FLIGHT NO:</li>
-    <li>DEPARTURE FROM AIRPORT TO DESTINATION COUNTRY FLIGHT NO:</li>
-    <li>DEPARTED FROM CUSTOMS OF ORIGINAL COUNTRY</li>
-    <li>DEPARTED FROM CARRIER</li>
-    <li>DEPARTED FROM THE FIRST MILE SORTING CENTER</li>
-    <li>ARRIVED AT THE FIRST MILE SORTING CENTER</li>
-    <li>ARRIVED FROM OVERSEAS (COUNTRY CODE: CN), IN TRANSIT TO NEXT PROCESSING CENTRE FOR</li>
-    <li>RELEASED FROM CUSTOMS</li>
-    <li>LEAVING CENTER, NEXT STATION CENTER</li>
-    <li>CENTER CUSTOMS SCAN</li>
-    <li>CENTER RECEIVED</li>
-    <li>UNDELIVERABLE</li>
-    <li>ARRIVED AT THE LOCAL DISTRIBUTION CENTER</li>
-    <li>DEPARTED FROM LOCAL DISTRIBUTION CENTER</li>
-    <li>INTERNATIONAL ITEM MAILED IN ORIGINATING COUNTRY</li>
-    <li>AWAITING RELEASE FROM CHINA</li>
-    <li>SHIPMENT CANCELLED</li>
-    <li>READY FOR PICKUP AT DELIVERY PLACE</li>
-    <li>THE CONSIGNMENT WAS DELIVERED</li>
-    <li>THE CONSIGNMENT IS BEING PREPARED FOR DELIVERY</li>
-    <li>THE CONSIGNMENT ENTERED THE LOGISTICS HUB</li>
-    <li>INCOMMING INTERNATIONAL</li>
-    <li>PROCESSING, DEPARTURE FROM INWARD OFFICE OF EXCHANGE</li>
-    <li>SEND ITEM TO DOMESTIC LOCATION:</li>
-    <li>HAND OVER TO CUSTOMS</li>
-    <li>LEFT THE WAREHOUSE</li>
-    <li>THE ITEM SENT FROM THE OFFICE OF EXCHANGE OF ORIGIN COUNTRY TO THE DESTINATION COUNTRY</li>
-    <li>ARRIVED AT THE WAREHOUSE</li>
-    <li>RETURN, STORAGE LIFE IS EXPIRED</li>
-    <li>ATTEMPTED DELIVERY</li>
+    <li>Pour les livraisons en Belgique:
+        <ul>
+            <li>option Standard: 7. Livraison par bpost à domicile des articles jusqu'à 30 kg, avec délai d'un jour ouvrable</li>
+            <li>option Garantie: 8. Les colis destinés à domicile ou dans un point de retrait (woods, poignant le cirewood) et qui pèsent moins de 30 kilos sont livrés assurément dès le premier jour ouvrable suivant. Surtout, ils peuvent bénéficier d'un aarantit jusqu'à 500€ pour bpost</li>
+        </ul>
+    </li>
+</ul>
+<p> 9. Les livraisons nationales peuvent se faire à domicile, sur le lieu de travail, dans un bureaupost, un des 2300 bureau b post et de s, le point retrait ou automates colis</p>
+<p> 10. Dans le cas de la distribution à l'étranger, une adresse de réception est toujours impérative, sauf pour les Pays-Bas et la France dont les colis peuvent se diriger dans un point relais. B Post permet, pour ces deux pays, que l'on apporte son colis au point relais le plus proche de chez-soi en quelques clics. Cela vous facilitera la vie!</p>
+<ul>
+    <li>Pour les livraisons en Europe: 12. Ce service est en ligne, l'expéditeur gère lui-même son envoi et imprime son étiquette d'expédition, la livraison se fait à domicile ou au travail en France et aux Pays Bas, via la Poste dans l'Hexagone on peut même choisir un point de collecte pour récupérer personellement son bien<ul>
+            <li>option Standard (disponible en ligne): 13. La livraison se fait à une adresse (domicile ou lieu de travail), pour les colis jusqu'à 2 kg et est offerte sans suivi</li>
+            <li>option Economy (disponible en bureau de vente): 14. La livraison se fait à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30 kg, un suivi est prévu via l'outil Bpost Track &amp; Trace</li>
+            <li>option Standard (disponible en bureau de vente): 15. La livraison se fait à une adresse (domicile ou lieu de travail) pour les colis d'un poids maximal de 30 kg, contre signature, et avec avis de réception daté, un suivi est prévu pour fins de vérification par l'outil Bpost Track &amp; Trace</li>
+            <li>option Express (disponible en bureau de vente): 16. Ce service est en ligne, l'expéditeur gère lui-même son envoi et imprime son étiquette d'expédition, la livraison se fait à domicile ou au travail pour les colis jusqu'à 30 kg</li>
+        </ul>
+    </li>
+</ul>
+<ul>
+    <li>Pour les livraisons internationales:
+        <ul>
+            <li>option Standard (disponible en ligne): 17. La livraison se fait à une adresse (domicile ou lieu de travail), pour les colis jusqu'à 2 kg et est offerte sans suivi</li>
+            <li>option Economy (disponible en bureau de vente): 18. La livraison se fait à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30 kg, un suivi est prévu via l'outil Bpost Track &amp; Trace</li>
+            <li>option Standard (disponible en bureau de vente): 19. La livraison se fait à une adresse (domicile ou lieu de travail) pour les colis jusqu'à 30 kg, contre signature et avec avis de réception daté. Un suivi est effectué via l'outil Bpost Track &amp; Trace</li>
+            <li>option Express (disponible en bureau de vente): 20. Les destinations couvertes par Bpost comprennent entre autres les pays et territoires</li>
+        </ul>
+    </li>
+</ul>
+<p> 21. Belgique Pays-Bas Allemagne Royaume-Uni Afrique du Sud Albanie Algérie Andorre Angola Antilles néerlandaises Arabie saoudite Argentine Australie Autriche Azerbaidjan Les Açores Bahamas Bahreïn Bangladesh Barbade Bénin Bermudes Bhoutan Biélorussie Bosnie Botswana Brésil Brunei Burkina Faso Bulgarie Burundi Cambodge Cameroun Canada Cap Vert Chili Chine Chypre Cité du Vatican Colombie Corée du Sud Costa Rica Côte d'ivoire Croatie Cuba Danemark Djibouti Egypte Equateur Emirats arabes unis Erythrée Espagne Estonie États-Unis Éthiopie Fidji Finlande Gabon Gambie Géorgie Ghana Gibraltar Grèce Groenland Guadeloupe Guam Guernesey Guyane française Guinée Haïti HongKong Hongrie Iles Caïman Iles Vierges Inde Indonésie Iran Irlande Islande Israel Italie Jamaïque Japon Jordanie Kazakhstan Kosovo Kenya Koweït Laos Lesotho Lettonie Liberia Liechtenstein surfer Macao Madère Macédoine Madagascar Malaisie Malawi Maldives Mali Malte Maroc Martinique Mauritanie Mexique Moldavie Mongolie Mozambique Nicaragua Niger Nigeria Norvège Nouvelle Zélande Nouvelle Calédonie Oman Ouganda</p>
+<ul>
+    <li> Pakistan Panama Papouasie-Nlle-Guinée Paraguay Pérou Philippines Pologne Polynésie française Porto Rico</li>
+</ul>
+<h2>Comment contacter Bpost ?</h2>
+<p> Portugal Qatar République centrafricaine République du Congo République dominicaine Réunion Russie Roumanie</p>
+<ul>
+    <li>Pl.de la Monnaie, 1000 Bruxelles, Belgique. Le service clients est joignable pour les particuliers, du lundi au vendredi de 8h à 19h, et le samedi de 8h30 à 16h30, au numéro suivant: +32022785127</li>
+</ul>
+<p> Rwanda Saint Marin Salvador Samoa Sénégal Sierra Leone Serbie Seychelles Singapore volatile Slovaquie Slovénie</p>
+<ul>
+    <li>+3202205785</li>
+</ul>
+<p> Sri Lanka Somalia Suède Suisse Suriname Syrie Taiwan Tanzanie Tchad Thaïlande Tunisie Togo Turquie Ukraine</p>
+<ul>
+    <li>bpost, Boîte 5000, 1000 Bruxelles.</li>
+</ul>
+<h2>Informations à propos des livraisons Bpost</h2>
+<p> Uruguay Venezuela Vietnam Yémen Zambie Zimbabwe</p>
+<p> 22. Le siège social de Bpost est établi en Belgique et situé à l'adresse</p>
+<p> 23. Pour les professionnels, du lundi au vendredi de 8h30 à 17h30, le numéro est le suivant:</p>
+<p> 24. Adresser une lettre à Bpost à l'adresse suivante:</p>
+<p> 25 Bpost, qui se nommait autrefois Vlle de Ets une société privée qui travaille dans le secteur de la poste et des messageries nationales en Belgique; c'est un grand fournisseur de services postaux sans oublier que ses stations de telephone-mobile abondent aussi certain service financier pour vous rappeler comme elle assurements life insurance-, etc les opérations garantit elles-memes cependant tant mieux ce qu' est sous-entendu toute forme d' assurance n' intervention pas que pour le proche à portée elle a meme beaucoup de ra promotion en bénéficier marketing operations</p>
+<p> 26. initialement, le 2 octobre 1830 à 1971- le service postal national, en Belgique est géré par l'Etat et devient la "régie des postes" en 1971. Elle s' appelle "La Poste" A compter de 1992 et jusqu'à son adoption comme logo en 2010 laisse les living final months duringc 'est des entreprises même.</p>
+<p> 27. Bpost est la première entreprise de courrier belge, qui fournit des services de colis transport et livraison au niveau national ou international.</p>
+<p> 28. Elle emploie plus de 35.000 employés et salariés en Belgique et à l'étranger. Parmi ses principaux concurrents en Europe se trouvent d'autres sociétés comme la Netherland's TNT ou Postnord de Suède.</p>
+<p> 29. Bpost offre des solutions de livraison de colis à domicile en Belgique, sur le lieu de travail et en point relais ainsi que dans le monde entier et fournit aussi des services d'emballage, traçabilité des marchandises traitement de commande.</p>
+<h2>Le numéro de tracking d'une livraison Bpost</h2>
+<p> 30. Bpost propose également des services financières, et des assurances.</p>
+<h2>Les différents états de suivi Bpost</h2>
+<ul>
+    <li>ARRIVAL AT FACILITIES</li>
+    <li>AWAITING RESPONSE FROM ADDRESSEE: DELIVERY IMPOSSIBLE - ITEM DAMAGED</li>
+    <li>ARRIVAL AT INTERNATIONAL OFFICE OF EXCHANGE</li>
+    <li>DEPARTURE FROM OFFICE OF EXCHANGE</li>
+    <li>CUSTOMS CLEARED: AUTHORIZED</li>
+    <li> 31. Bpost dispose de bureaux à l'étranger sur plusieurs continents, reconnue comme l'un des acteurs principaux mondiaux dans la distribution du dernier kilomètre de la en Europe et dans le monde.</li>
+    <li>BACK TO SENDER: ITEM REFUSED BY ADDRESSEE</li>
+    <li>ITEM NOT DELIVERED: ADDRESSEE WAS CONTACTED</li>
+    <li>ITEM IN DELIVERY</li>
+    <li>ITEM RELEASED FROM CUSTOMS</li>
+    <li>ITEM NOT DELIVERED: DELIVERY ATTEMPT DONE - OTHER REASON</li>
+    <li>YOUR ITEM HAS BEEN SORTED</li>
+    <li> 32. Bpost collabore avec de nombreux partenaires pour assurer la livraison de mail dans les pays étrangers.</li>
+    <li>ITEM INFORMATION REGISTERED MANUALLY</li>
+    <li>ITEM DELIVERED</li>
+    <li>NEW DELIVERY FORESEEN: AT REQUEST OF ADDRESSEE</li>
+    <li>ITEM PRESENTED: 33. De plus en plus prisés par les e-commerçants, les services de Bpost rencontrent un grand succès sur le marché pour le transport de marchandises et la livraison des colis.</li>
+    <li>ITEM PRESENTED TO CUSTOMS FOR CONTROL</li>
+    <li>ITEM DEPOSITED</li>
+    <li>ITEM AVAILABLE AT PICKUP POINT</li>
+    <li>RETAINED AT CUSTOMS: REASON UNKNOWN</li>
+    <li> 34.Il y a entre 10 et 30 caractères dans un numéro de suivi Bpost qui mélange des lettres majuscules aux chiffres. En règle générale, le numéro se compose de deux lettres majuscules au début séparées d'un tiret, puis neuf chiffres et enfin deux lettres majuscules à la fin. Comme par exemple: AA123456789BE. Les deux dernières lettres BE indiquent que le colis a été expédié depuis la Belgique.</li>
+    <li>IRREGULARITY ITEM: PROBLEM ADDRESS</li>
+    <li> 35. CONFIRMATION DE PREPARATION DE L'ENVOI REÇUE</li>
 </ul></body></html>
